<resources>
    <string name="app_name" translatable="false">Alianza</string>
    <string name="tabs_name_news">News</string>
    <string name="tabs_name_team">Team</string>
    <string name="tabs_name_match">Matches</string>
    <string name="app_login_name" translatable="false">S.C.Alianza</string>


    <!--Strings Match -->
    <string name="name_team" translatable="false">E.C. Alianza</string>
    <string name="x" translatable="false">X</string>
    <string name="name_opponent_team">Opponent Team</string>
    <string name="name_place">Place</string>
    <string name="date_match">Date</string>
    <string name="hour_match">Hour</string>
    <string name="description_match">Description</string>

    <!--Strings Team -->
    <string name="name_player">Name</string>
    <string name="player_birth">Birth</string>
    <string name="description_player">Description</string>
    <string name="position_player">Position</string>
    <string name="photo_player">Photo</string>
    <string name="player_age">Age</string>

    <!--Strings News -->
    <string name="title_news">News Title</string>
    <string name="author_news">Author</string>
    <string name="news">News</string>
    <string name="news_date">News Date</string>

    <!--Strings Menu -->
    <string name="menu_add">Add</string>
    <string name="menu_search">Search</string>
    <string name="menu_check" translatable="false">Check</string>
    <string name="menu_edit">Edit</string>

    <string name="menu_drawer_admin">Request Administrator</string>
    <string name="menu_drawer_add_admin">Add Administrator</string>
    <string name="menu_drawer_logout">Log Out</string>

    <string name="action_admin">Request Administrator</string>
    <string name="action_add_admin">Add Administrator</string>
    <string name="action_logout">Log Out</string>


    <string name="years">Years</string>
    <string name="all_fields_mandatory">All fields are mandatory!</string>
    <string name="choice">Choice</string>
    <string name="button_galery">Galery</string>
    <string name="button_camera">Camera</string>
    <string name="select_image">Image Select</string>
    <string name="delete">You want to delete data?</string>
    <string name="attention">Attention!</string>
    <string name="add">You want to add as an administrator?</string>

    <string name="not_permission">You don\'t have permission!</string>
    <string name="request_permission">You requested permission, wait please!</string>
    <string name="send_request_permission">Your request has been sent!</string>
    <string name="admin_permission">You\'re administrator!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_drawer_settings">Settings</string>


</resources>
