<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/visualizationMatch_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/AppThemeRegisters">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_visualizationMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDateOfMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:hint="@string/date_match"
                android:textColor="@color/colorBlack"
                android:textSize="25dp" />


            <TextView
                android:id="@+id/textViewHourOfMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="@string/hour_match"
                android:textColor="@color/colorBlack"
                android:textSize="25dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/textViewTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name_team"
            android:textColorHint="@color/colorBlack"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textViewXMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/x"
            android:textColorHint="@color/colorBlack"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textViewOpponentTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/name_opponent_team"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textViewPlaceOfMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_place"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textViewDescriptionMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_match"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

