<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="1dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/idMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/ic_blur_circular_black_24dp"/>

        <TextView
            android:id="@+id/dateMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/date_match"
            android:textColor="@color/colorBlack"
            android:textSize="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/nameTeam1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_team"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/x"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/nameTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/name_team2"/>

        <TextView
            android:id="@+id/namePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/name_place"/>

    </LinearLayout>
</android.support.v7.widget.CardView>