<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/visualizationPlayer_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:theme="@style/AppThemeRegisters">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/picturePlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_visualizationPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <TextView
            android:id="@+id/textViewPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_player"
            android:textColor="@color/colorBlack"
            android:textSize="30dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewPlayerBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_birth"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textViewPlayerPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position_player"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/textViewPlayerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_player"
            android:textColor="@color/colorBlack"
            android:textSize="25dp" />


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>

