<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerCreateNews_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:theme="@style/AppThemeRegisters">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_RegisterCreateNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDateOfMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextDateOfMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_match"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:onClick="showDatePickerDialog"
                android:editable="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputHourOfMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextHourOfMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hour_match"
                android:maxLines="1"
                android:textColor="@color/colorBlack"
                android:onClick="showTimePickerDialog"
                android:editable="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputOpponentTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">


            <EditText
                android:id="@+id/editTextOpponentTeam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_opponent_team"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPlaceOfMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">


            <EditText
                android:id="@+id/editTextPlaceOfMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_place"
                android:maxLines="2"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputDescriptionMatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextDescriptionMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_match"
                android:maxLines="4"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
