<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerCreatePlayer_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:theme="@style/AppThemeRegisters">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/picturePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/perfil_sombra"
                app:layout_collapseMode="parallax"
                android:onClick="addPhotoPlayer"/>

            <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/fabPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginRight="@dimen/md_keylines"
                android:src="@drawable/ic_photo_camera_white_24dp"
                app:backgroundTint="@color/md_purple_200"
                app:layout_collapseMode="parallax" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat"
                app:layout_collapseMode="pin"/>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_registerCreatePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_player"
                android:maxLines="1"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPlayerBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">


            <EditText
                android:id="@+id/editTextPlayerBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_birth"
                android:maxLines="1"
                android:onClick="showDatePickerDialog"
                android:editable="false"
                android:focusable="false"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPlayerPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextPlayerPosition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position_player"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPlayerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#000000">

            <EditText
                android:id="@+id/editTextPlayerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_player"
                android:maxLines="4" />


        </android.support.design.widget.TextInputLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
